--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1 style="color:black">Jenkins-Pipeline  Webhook demo Trigger !!!!</h1>
+  <h1 style="color:green">Jenkins-Pipeline  Webhook demo Trigger !!!!</h1>
 </div>
 
 </body>
