modify index page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,10 +11,9 @@
 <body>
 
 <div class="container-fluid">
-    <h3 style="color:blue">Jenkins-Pipeline Oob Email SLack Notification</h3>
+    <h3 style="color:blue">Jenkins-Pipeline Job Build-Deploy-Email-SLack Notification</h3>
 
-  <h1 style="color:green">Jenkins-Pipeline  Webhook demo Trigger !!!!</h1>
-    <h2 style="color:green">Jenkins-Pipeline  Job For Email Botifcation groovy temapte</h2>
+  <h2 style="color:green">Jenkins-Pipeline  demo with groovy-html.template email ext template</h2>
 
 </div>
 
